@@ -25,9 +25,18 @@ PSEUDO_COUNTRIES = [('eu',
                      'eionet': True,
                      'eun22': True,
                      }),
-                    ('int',
+                    ('xy',
                      {'code': 'int',
                       'name': 'International or multinat. organisation',
+                      'pub_code': '',
+                      'eu': False,
+                      'eea': False,
+                      'eionet': False,
+                      'eun22': False,
+                      }),
+                    ('un',
+                     {'code': 'un',
+                      'name': 'United Nations organisation',
                       'pub_code': '',
                       'eu': False,
                       'eea': False,
