@@ -1041,7 +1041,7 @@ class OrganisationsEditor(SimpleItem, PropertyManager):
 InitializeClass(OrganisationsEditor)
 
 
-id_re = re.compile(r'^[a-z]{2}_[a-z]+$')
+id_re = re.compile(r'(^[a-z]{2}|int)_[a-z]+$')
 phone_re = re.compile(r'^\+[\d ]+$')
 postal_code_re = re.compile(r'^[a-zA-Z]{2}[a-zA-Z0-9\- ]+$')
 
@@ -1060,7 +1060,8 @@ VALIDATION_ERRORS = {
     'postal_code': ('Postal codes must be in international notation (they '
                     'must start with a two-letter country code followed by a '
                     'combination of digits, latin letters, dashes and '
-                    'spaces).'),
+                    'spaces).'
+                    'Leave empty for international organisations.'),
     'country': "The country name is mandatory",
 }
 
